# loom

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  aiwf.yaml  project-structure.md
crates/loom/: Cargo.toml
crates/loom/schema/: gap-report.v1.schema.json  gap-report.v2.schema.json
crates/loom/src/: atomic.rs  backend.rs  lib.rs  main.rs  report.rs  runner.rs  umbrella.rs
crates/loom/tests/: containment.rs  durability.rs  equivalence.rs  runner.rs  self_host.rs  tlc_substrate.rs  umbrella_totality.rs  verify_seed.rs
experiments/loom-ultralight/: .gitignore  Cargo.toml  README.md  canonicalize.dfy  fsm.dfy  prereg-combination.md  prereg-fsm.md  prereg-prosey.md  prereg-reallocate.md  prosey.dfy  reallocate.dfy  run.sh
experiments/loom-ultralight/mutants/: M1.dfy  M10.dfy  M11.dfy  M12.dfy  M13.dfy  M14.dfy  M15.dfy  M16.dfy  M17.dfy  M18.dfy  M19.dfy  M2.dfy  M20.dfy  M3.dfy  M4.dfy  M5.dfy  M6.dfy  M7.dfy  M8.dfy  M9.dfy
experiments/loom-ultralight/mutants-fsm/: md1.dfy  md2.dfy  ml1.dfy  ml2.dfy  ml3.dfy  ml4.dfy  mt1.dfy  mt2.dfy  mt3.dfy  mxcross.dfy  mxskip.dfy
experiments/loom-ultralight/mutants-prosey/: mlen.dfy  mlink.dfy  mmd.dfy  mms_drop.dfy  mms_nocap.dfy  mnl.dfy
experiments/loom-ultralight/mutants-reallocate/: m_collapse_ids.dfy  m_keep_refs.dfy  m_leave_old.dfy  m_partial_refs.dfy
experiments/loom-ultralight/prompts/: disinterested.md  incentivized.md  intent-fsm.md  intent-prosey.md  intent-reallocate.md  intent.md
experiments/loom-ultralight/results/: RESULTS.md  kill-rate-n30.json  strength-n30.json
experiments/loom-ultralight/src/: main.rs
(+311 files in other folders)
