[package]
name = "loom"
version = "0.1.0"
edition = "2021"
description = "loom-light: an opt-in, contained verification-overlay runner"

[lib]
name = "loom"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wait-timeout = "0.2.1"

[dev-dependencies]
jsonschema = { version = "0.46.8", default-features = false }
schemars = "1.2.1"
